# koncile-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/koncile_mcp/: __init__.py  client.py  config.py  errors.py  http_server.py  server.py
tests/: conftest.py  test_client.py  test_config.py  test_e2e.py  test_errors.py  test_server.py
