[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koncile-mcp"
version = "0.1.0"
description = "MCP server for the Koncile document extraction API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
koncile-mcp = "koncile_mcp.server:main"
koncile-mcp-server = "koncile_mcp.http_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/koncile_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
